2001-12-17  Bradford Hovinen  <hovinen@ximian.com>

	* applier.c (applier_get_preview_widget): Make sure the pixmap is
	masked correctly
	(applier_apply_prefs): s/gtk_object_destroy/g_object_unref/

2001-12-07  Bradford Hovinen  <hovinen@ximian.com>

	* preferences.c (read_color_from_string): Check if string is
	non-NULL
	(preferences_load): Initialize the error structure

	* applier.c (applier_class_init): Initialize object_class properly
	before using it; install property after {get|set}_property are set
	(applier_get_preview_widget): Construct the GC before using it
